<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/background"
    tools:context="com.effone.pdlconnprovider.fragment.LocationSearchFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/et_search_location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/enter_adress"
        android:padding="5dp"
        android:singleLine="true"
        android:lines="1"
        android:textColorHint="@android:color/white" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radius"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />
    <Spinner
        android:id="@+id/sp_radius"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/radiuses"
        android:background="@drawable/spinner_bg"
        android:layout_margin="10dp"
        style="@style/mySpinnerStyle"
        android:popupBackground="@drawable/spinner_pop_bg"
        android:prompt="@string/select_radius"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btn_search_location"
        android:text="@string/search_for_location"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />
    </LinearLayout>


</FrameLayout>
