<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LocationDeatilsFragment"
    android:background="@drawable/background"
    android:clickable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_details"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/detail_divider"
            />

    <TextView
        android:id="@+id/tv_location_name_in_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"

        />
    <TextView
        android:id="@+id/tv_address1_in_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tv_address2_in_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"

      />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@android:color/white"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="10dp"
        />
        <TextView
            android:id="@+id/tv_phone_in_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:autoLink="phone"
            android:textColor="@color/locationSummeryListName"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fax"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="10dp"
          />
        <TextView
            android:id="@+id/tv_fax_in_details"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_hours"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="10dp"
           />
        <TextView
            android:id="@+id/tv_work_hours_in_details"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content" />

        <TextView

            android:id="@+id/tv_get_direction"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/get_direction"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/rounded_corner"
            android:visibility="gone"

            />



    </LinearLayout>

</FrameLayout>
